--- a/src/main/resources/Form/StatisticModule/TradeDiscountStatistic.fxml
+++ b/src/main/resources/Form/StatisticModule/TradeDiscountStatistic.fxml
@@ -30,9 +30,9 @@
                   <Insets left="50.0" top="10.0" />
                </HBox.margin>
             </TextField>
-            <Button mnemonicParsing="false" onAction="#searchTradeDiscount" text="Search">
+            <Button mnemonicParsing="false" onAction="#searchTradeDiscount" style="-fx-background-color: #1E90FF;" text="Search" textFill="WHITE">
                <HBox.margin>
-                  <Insets left="50.0" top="10.0" />
+                  <Insets left="30.0" top="10.0" />
                </HBox.margin>
                <font>
                   <Font name="System Bold" size="12.0" />
