--- a/src/main/resources/Form/Login.fxml
+++ b/src/main/resources/Form/Login.fxml
@@ -37,11 +37,16 @@
                     <children>
                         <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" opacity="0.87" prefHeight="435.0" prefWidth="451.0" style="-fx-background-color: #188bff;">
                             <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 3em; -fx-font-family: Quicksand; -fx-font-weight: bold; -fx-fill: white;" text="Welcome">
+                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 3em; -fx-font-family: Quicksand; -fx-font-weight: bold; -fx-fill: white;" text="Welcome to ERP System">
                                     <VBox.margin>
                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                     </VBox.margin>
                                 </Text>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter infomation to log in" textAlignment="CENTER" wrappingWidth="234.04296875">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </Text>
                                 <HBox alignment="CENTER" maxWidth="-Infinity" prefWidth="250.0">
                                     <children>
       
@@ -55,7 +60,7 @@
                                         </JFXTextField>
                                     </children>
                                     <VBox.margin>
-                                        <Insets top="100.0" />
+                                        <Insets top="50.0" />
                                     </VBox.margin></HBox>
                                 <HBox alignment="CENTER" layoutX="135.0" layoutY="84.0" maxWidth="-Infinity" prefHeight="58.0" prefWidth="242.0">
                                     <children>
@@ -90,7 +95,7 @@
                         <Label fx:id="pwLabel" />
                         <JFXCheckBox fx:id="cbRememberMe" styleClass="inputField" stylesheets="@style.css" text="Remember me ">
                            <VBox.margin>
-                              <Insets right="130.0" top="20.0" />
+                              <Insets right="130.0" top="-10.0" />
                            </VBox.margin>
                         </JFXCheckBox>
                                 <JFXButton fx:id="btnLogin" onAction="#logIn" prefHeight="45.0" prefWidth="91.0" styleClass="confirmBtn" stylesheets="@style.css" text="Login">
