--- a/src/main/resources/Form/StatisticModule/CustomerListStatistic.fxml
+++ b/src/main/resources/Form/StatisticModule/CustomerListStatistic.fxml
@@ -44,7 +44,7 @@
                         <Insets left="20.0" />
                      </HBox.margin>
                   </DatePicker>
-                  <Button mnemonicParsing="false" onAction="#searchByDay" text="Search By Day">
+                  <Button mnemonicParsing="false" onAction="#searchByDay" style="-fx-background-color: #1E90FF;" text="Search By Day" textFill="WHITE">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
@@ -52,7 +52,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#showAll" text="Show All">
+                  <Button mnemonicParsing="false" onAction="#showAll" style="-fx-background-color: green;" text="Show All" textFill="WHITE">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
@@ -66,7 +66,7 @@
       </BorderPane>
    </top>
    <right>
-      <BarChart fx:id="bcCustomerList" BorderPane.alignment="CENTER">
+      <BarChart fx:id="bcCustomerList" prefHeight="477.0" prefWidth="532.0" BorderPane.alignment="CENTER">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
@@ -76,6 +76,6 @@
       </BarChart>
    </right>
    <left>
-      <Pagination fx:id="pgCustomerStatistic" prefHeight="428.0" prefWidth="504.0" BorderPane.alignment="CENTER" />
+      <Pagination fx:id="pgCustomerStatistic" prefHeight="477.0" prefWidth="479.0" BorderPane.alignment="CENTER" />
    </left>
 </BorderPane>
