--- a/src/main/resources/Form/StatisticModule/GroupProductStatistic.fxml
+++ b/src/main/resources/Form/StatisticModule/GroupProductStatistic.fxml
@@ -44,7 +44,7 @@
                                 <Insets left="20.0" />
                             </HBox.margin>
                         </DatePicker>
-                        <Button mnemonicParsing="false" onAction="#searchByDay" text="Search By Day">
+                        <Button mnemonicParsing="false" onAction="#searchByDay" style="-fx-background-color: #1E90FF;" text="Search By Day" textFill="#fffefe">
                             <HBox.margin>
                                 <Insets left="20.0" />
                             </HBox.margin>
@@ -52,7 +52,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#showAll" text="Show All">
+                        <Button mnemonicParsing="false" onAction="#showAll" style="-fx-background-color: green;" text="Show All" textFill="#fffefe">
                             <HBox.margin>
                                 <Insets left="20.0" />
                             </HBox.margin>
