--- a/src/main/resources/Form/StatisticModule/SalesStatistic.fxml
+++ b/src/main/resources/Form/StatisticModule/SalesStatistic.fxml
@@ -44,7 +44,7 @@
                                 <Insets left="20.0" />
                             </HBox.margin>
                         </DatePicker>
-                        <Button mnemonicParsing="false" onAction="#searchByDay" text="Search By Day">
+                        <Button mnemonicParsing="false" onAction="#searchByDay" style="-fx-background-color: #1E90FF;" text="Search By Day" textFill="WHITE">
                             <HBox.margin>
                                 <Insets left="20.0" />
                             </HBox.margin>
@@ -52,7 +52,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#showAll" text="Show All">
+                        <Button mnemonicParsing="false" onAction="#showAll" style="-fx-background-color: green;" text="Show All" textFill="WHITE">
                             <HBox.margin>
                                 <Insets left="20.0" />
                             </HBox.margin>
@@ -65,13 +65,6 @@
             </bottom>
         </BorderPane>
     </top>
-    <bottom>
-        <BorderPane prefHeight="49.0" prefWidth="826.0" BorderPane.alignment="CENTER">
-            <top>
-                <Pagination prefHeight="32.0" prefWidth="826.0" BorderPane.alignment="CENTER" />
-            </top>
-        </BorderPane>
-    </bottom>
    <right>
       <BarChart fx:id="bcSaleStatis" BorderPane.alignment="CENTER">
         <xAxis>
