--- a/src/main/resources/Form/CustomerManageModule/AddDiscount.fxml
+++ b/src/main/resources/Form/CustomerManageModule/AddDiscount.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.module2.AddDiscountController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CustomerManageModule.AddDiscountController">
   <columnConstraints>
     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="331.0" minWidth="10.0" prefWidth="213.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="387.0" />
@@ -25,11 +25,11 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Name:" GridPane.rowIndex="1" />
-      <Label text="Limit: " GridPane.rowIndex="2" />
-      <Label text="Discount: " GridPane.rowIndex="3" />
-      <Label text="Start Date:" GridPane.rowIndex="4" />
-      <Label text="End Date:" GridPane.rowIndex="5" />
+      <Label text="Name:" textAlignment="CENTER" GridPane.rowIndex="1" />
+      <Label text="Limit: " textAlignment="CENTER" GridPane.rowIndex="2" />
+      <Label text="Discount: " textAlignment="CENTER" GridPane.rowIndex="3" />
+      <Label text="Start Date:" textAlignment="CENTER" GridPane.rowIndex="4" />
+      <Label text="End Date:" textAlignment="CENTER" GridPane.rowIndex="5" />
       <Button fx:id="okBtn" mnemonicParsing="false" onAction="#addDiscount" text="ADD NEW TRADE DISCOUNT" GridPane.columnIndex="1" GridPane.rowIndex="6" />
       <TextField fx:id="nameField" maxWidth="198.0" prefHeight="26.0" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <TextField fx:id="limitField" maxWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
