--- a/src/main/resources/Form/CustomerManageModule/AddDiscount.fxml
+++ b/src/main/resources/Form/CustomerManageModule/AddDiscount.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CustomerManageModule.AddDiscountController">
   <columnConstraints>
@@ -25,20 +26,41 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Name:" textAlignment="CENTER" GridPane.rowIndex="1" />
-      <Label text="Limit: " textAlignment="CENTER" GridPane.rowIndex="2" />
-      <Label text="Discount: " textAlignment="CENTER" GridPane.rowIndex="3" />
-      <Label text="Start Date:" textAlignment="CENTER" GridPane.rowIndex="4" />
-      <Label text="End Date:" textAlignment="CENTER" GridPane.rowIndex="5" />
-      <Button fx:id="okBtn" mnemonicParsing="false" onAction="#addDiscount" text="ADD NEW TRADE DISCOUNT" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+      <Label text="Name:" textAlignment="CENTER" GridPane.rowIndex="1">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label text="Limit: " textAlignment="CENTER" GridPane.rowIndex="2">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label text="Discount Percentage: " textAlignment="CENTER" GridPane.rowIndex="3">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label text="Start Date:" textAlignment="CENTER" GridPane.rowIndex="4">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label text="End Date:" textAlignment="CENTER" GridPane.rowIndex="5">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Button fx:id="okBtn" mnemonicParsing="false" onAction="#addDiscount" style="-fx-background-color: #1E90FF;" text="ADD NEW TRADE DISCOUNT" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="6">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Button>
       <TextField fx:id="nameField" maxWidth="198.0" prefHeight="26.0" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <TextField fx:id="limitField" maxWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <TextField fx:id="percentField" maxWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <DatePicker fx:id="startDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <DatePicker fx:id="endDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <DatePicker fx:id="startDatePicker" promptText="Select Start Date" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <DatePicker fx:id="endDatePicker" promptText="Select End Date" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2">
          <children>
-            <Label fx:id="promptLabel" layoutX="239.0" layoutY="17.0" text="*ADD DISCOUNTS*" />
+            <Label fx:id="promptLabel" layoutX="239.0" layoutY="17.0" text="*ADD DISCOUNTS*">
+               <font>
+                  <Font name="System Bold Italic" size="15.0" />
+               </font></Label>
          </children>
       </AnchorPane>
    </children>
