--- a/src/main/resources/Form/MainForm/DashBoard.fxml
+++ b/src/main/resources/Form/MainForm/DashBoard.fxml
@@ -176,7 +176,10 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="217.0" text="Button" />
+                  <Button mnemonicParsing="false" onAction="#openTradeDiscountManage" prefHeight="41.0" prefWidth="220.0" text="Trade Discount Manage">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
                   <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="223.0" text="Button" />
                </children>
             </VBox>
