--- a/src/main/resources/Form/Login.fxml
+++ b/src/main/resources/Form/Login.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
@@ -18,9 +17,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
     <children>
-      <ImageView fitHeight="668.0" fitWidth="1000.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="768.0" fitWidth="1366.0" pickOnBounds="true">
          <image>
             <Image url="@../Photo/erp.jpg" />
          </image>
@@ -93,11 +92,6 @@
                                     </VBox.margin>
                                 </HBox>
                         <Label fx:id="pwLabel" />
-                        <JFXCheckBox fx:id="cbRememberMe" styleClass="inputField" stylesheets="@style.css" text="Remember me ">
-                           <VBox.margin>
-                              <Insets right="130.0" top="-10.0" />
-                           </VBox.margin>
-                        </JFXCheckBox>
                                 <JFXButton fx:id="btnLogin" onAction="#logIn" prefHeight="45.0" prefWidth="91.0" styleClass="confirmBtn" stylesheets="@style.css" text="Login">
                                     <VBox.margin>
                                         <Insets top="50.0" />
