--- a/src/main/resources/Form/MainForm/DashBoard.fxml
+++ b/src/main/resources/Form/MainForm/DashBoard.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -59,18 +58,25 @@
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Username:">
+                        <Label text="Username:" GridPane.rowIndex="1">
                            <font>
                               <Font name="System Bold" size="13.0" />
                            </font></Label>
-                        <Label text="Employee ID:" GridPane.rowIndex="1">
+                        <Label text="Employee ID:">
                            <font>
                               <Font name="System Bold" size="13.0" />
                            </font></Label>
-                        <Label text="toan158n" GridPane.columnIndex="1" />
-                        <Label text="0012" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="lblUsername" text="toan158n" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="lblID" text="0012" GridPane.columnIndex="1" />
+                        <Label layoutX="10.0" layoutY="35.0" text="Role:" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblRole" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                      <BorderPane.margin>
                         <Insets left="20.0" />
@@ -80,19 +86,7 @@
                <right>
                   <HBox prefHeight="69.0" prefWidth="96.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="43.0" prefWidth="47.0" style="-fx-background-color: transparent;">
-                           <HBox.margin>
-                              <Insets top="10.0" />
-                           </HBox.margin>
-                           <graphic>
-                              <ImageView fitHeight="31.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../Photo/bell-icon.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                        <Button contentDisplay="TOP" mnemonicParsing="false" style="-fx-background-color: transparent;">
+                        <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#logOut" style="-fx-background-color: transparent;">
                            <HBox.margin>
                               <Insets left="10.0" top="10.0" />
                            </HBox.margin>
@@ -112,38 +106,14 @@
          <left>
             <VBox prefHeight="439.0" prefWidth="220.0" BorderPane.alignment="CENTER">
                <children>
-                  <TitledPane animated="false" expanded="false" prefHeight="176.0" prefWidth="203.0" text="Module List">
-                     <content>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Button mnemonicParsing="false" prefHeight="37.0" prefWidth="198.0" text="Warehousing Module">
-                                 <font>
-                                    <Font name="System Bold" size="14.0" />
-                                 </font>
-                              </Button>
-                              <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="198.0" text="Customer Manage Module">
-                                 <font>
-                                    <Font name="System Bold" size="14.0" />
-                                 </font>
-                              </Button>
-                              <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="198.0" text="Sale Manage Module">
-                                 <font>
-                                    <Font name="System Bold" size="14.0" />
-                                 </font>
-                              </Button>
-                              <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="198.0" text="Statistic Module">
-                                 <font>
-                                    <Font name="System Bold" size="14.0" />
-                                 </font>
-                              </Button>
-                           </children>
-                        </VBox>
-                     </content>
-                  </TitledPane>
                   <Button mnemonicParsing="false" onAction="#openSaleManage" prefHeight="37.0" prefWidth="220.0" text="Sales Manage">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
+                  <Button mnemonicParsing="false" onAction="#openCreateOrder" prefHeight="33.0" prefWidth="220.0" text="Create Order" />
+                  <Button mnemonicParsing="false" onAction="#openCustomerList" prefHeight="34.0" prefWidth="220.0" text="Customer List" />
+                  <Button mnemonicParsing="false" onAction="#openCommission" prefHeight="35.0" prefWidth="220.0" text="Commission Manage" />
+                  <Button mnemonicParsing="false" onAction="#openGroupProduct" prefHeight="40.0" prefWidth="220.0" text="Group Produt Manage" />
                   <Button mnemonicParsing="false" onAction="#openPayment" prefHeight="35.0" prefWidth="220.0" text="Payment Manage">
                      <font>
                         <Font name="System Bold" size="12.0" />
