--- a/src/main/resources/Form/SalesmanModule/ReceiptByType.fxml
+++ b/src/main/resources/Form/SalesmanModule/ReceiptByType.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="649.0" prefWidth="805.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SalesManageModule.ReceiptByTypeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="562.0" prefWidth="805.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SalesManageModule.ReceiptByTypeController">
    <top>
       <HBox prefHeight="48.0" prefWidth="779.0" BorderPane.alignment="CENTER">
          <children>
@@ -26,17 +26,6 @@
                   <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../Photo/save.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-            <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="65.0" prefWidth="51.0" text="Edit">
-               <graphic>
-                  <ImageView fitHeight="36.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../Photo/create-new--v1.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -156,7 +145,7 @@
       </GridPane>
    </center>
    <bottom>
-      <BorderPane prefHeight="325.0" prefWidth="805.0" BorderPane.alignment="CENTER">
+      <BorderPane prefHeight="262.0" prefWidth="805.0" BorderPane.alignment="CENTER">
          <top>
             <HBox prefHeight="37.0" prefWidth="805.0" BorderPane.alignment="CENTER">
                <children>
@@ -198,8 +187,11 @@
             </HBox>
          </top>
          <center>
-            <Pagination fx:id="pgReceiptList" prefHeight="295.0" prefWidth="805.0" BorderPane.alignment="CENTER" />
-         </center></BorderPane>
+            <Pagination fx:id="pgReceiptList" prefHeight="244.0" prefWidth="805.0" BorderPane.alignment="CENTER" />
+         </center>
+         <opaqueInsets>
+            <Insets top="5.0" />
+         </opaqueInsets></BorderPane>
    </bottom>
    <right>
       <AnchorPane prefHeight="388.0" prefWidth="77.0" BorderPane.alignment="CENTER" />
